--- a/transformasi/daftarsoal.html
+++ b/transformasi/daftarsoal.html
@@ -114,9 +114,36 @@
     <!-- ================================================================= OFFCANVAS END ======================================================================-->
     <!-- ====================================================================================================================================================== -->
 
-    <section style="padding-top: 6rem; padding-bottom: 5rem">
+    <section style="padding-bottom: 6rem">
       <div class="container">
-        <h3>Latihan Soal</h3>
+        <div class="row">
+          <div class="col-md-9 pb-2" style="padding-top: 5rem">
+            <h3>Latihan Soal</h3>
+            <div class="list-group">
+              <a href="#" class="list-group-item list-group-item-action active text-center" aria-current="true"> Kumpulan Latihan Soal Transformasi Geometri </a>
+              <a href="/transformasi/latihansoal/translasisoal.html" class="list-group-item list-group-item-action">Latihan Translasi</a>
+              <a href="#" class="list-group-item list-group-item-action">Latihan Refleksi</a>
+              <a href="#" class="list-group-item list-group-item-action">Latihan Rotasi</a>
+              <a href="#" class="list-group-item list-group-item-action">Latihan Dilatasi</a>
+              <a href="#" class="list-group-item list-group-item-action">Latihan Transformasi suatu Kurva</a>
+              <a href="#" class="list-group-item list-group-item-action">Latihan Transformasi Komposisi</a>
+              <a href="#" class="list-group-item list-group-item-action">Latihan Transformasi Geometri 1</a>
+              <a href="#" class="list-group-item list-group-item-action">Latihan Transformasi Geometri 2</a>
+            </div>
+          </div>
+          <div class="col-md-3 d-block pb-2">
+            <div class="list-group sticky-sm-top" style="padding-top: 5rem">
+              <a href="../index.html" class="list-group-item list-group-item-action active" aria-current="true"> HOME mathdosman.site </a>
+              <a href="/transformasi/translasi.html" class="list-group-item list-group-item-action">Translasi</a>
+              <a href="/transformasi/refleksi.html" class="list-group-item list-group-item-action">Refleksi</a>
+              <a href="/transformasi/rotasi.html" class="list-group-item list-group-item-action">Rotasi</a>
+              <a href="/transformasi/dilatasi.html" class="list-group-item list-group-item-action">Dilatasi</a>
+              <a href="/transformasi/kurva.html" class="list-group-item list-group-item-action">Transformasi suatu Kurva</a>
+              <a href="/transformasi/komposisi.html" class="list-group-item list-group-item-action">Transformasi Komposisi</a>
+              <a href="/transformasi/daftarsoal.html" class="list-group-item list-group-item-action">Kumpulan Latihan Soal</a>
+            </div>
+          </div>
+        </div>
 
         <div class="d-grid gap-2 d-md-block position-relative">
           <a href="/transformasi/komposisi.html"> <button class="btn btn-primary position-absolute top-0 start-0" type="button">Komposisi</button></a>
