--- a/transformasi/komposisi.html
+++ b/transformasi/komposisi.html
@@ -112,10 +112,10 @@
 </div>
 <!-- ================================================================= OFFCANVAS END ======================================================================-->
 <!-- ====================================================================================================================================================== -->
-<div class="container" style="padding-top: 7rem">
-<h3>Komposisi Transformasi</h3>
-  <div class="row justify-content-center">
-    <div class="col-md-9">
+<div class="container">
+  <div class="row justify-content-center" >
+    <div class="col-md-9" style="padding-top: 5rem">
+      <h3>Komposisi Transformasi</h3>
       <ol>
         <li>Pengertian Komposisi Transformasi</li>
         <p>
@@ -310,7 +310,7 @@
       </ol>
     </div>
     <div class="col-md-3 d-block pb-1">
-      <div class="list-group">
+      <div class="list-group sticky-top" style="padding-top: 5rem;">
         <a href="../index.html" class="list-group-item list-group-item-action active" aria-current="true">
         HOME mathdosman.site
         </a>
