--- a/transformasi/kurva.html
+++ b/transformasi/kurva.html
@@ -120,12 +120,11 @@
 <!-- ================================================================= OFFCANVAS END ======================================================================-->
 <!-- ====================================================================================================================================================== -->
 
-<section style="padding-top: 6rem; padding-bottom: 7rem">
+<section style="padding-bottom: 7rem">
     <div class="container">
       <div class="row">
-        <h3> Transformasi Suatu Kurva </h3>
-        <div class="col-md-9">
-
+        <div class="col-md-9" style="padding-top: 5rem;">
+<h3> Transformasi Suatu Kurva </h3>
 <p> Sebelumnya kita hanya mempelajari cara menentukan transformasi suatu titik, sekarang kita akan menentukan transformasi suatu kurva. Jika ingin mencari bayangan suatu kurva yang memiliki persamaan \(y=f(x) \) oleh suatu transfromasi, maka dari transformasi tersebut lebih dahulu kita tentukan \(x\) dan \(y\) dalam bentuk \(x'\) dan \(y'\), kemudian bayangannya diperoleh dengan mensubstitusikan \(x\) dan \(y\) ke \(y=f(x)\) dari transformasi tersebut. 
 </p>
 <div class="row p-2 justify-content-center">
@@ -405,7 +404,7 @@ Jika diperumum lagi untuk suatu kurva bila ditranslasi oleh \(T=\begin{pmatrix} 
 </div>
         </div>
         <div class="col-md-3">
-            <div class="list-group">
+            <div class="list-group sticky-top" style="padding-top: 5rem;">
                 <a href="../index.html" class="list-group-item list-group-item-action active" aria-current="true">
                   HOME mathdosman.site
                 </a>
