--- a/transformasi/latihansoal/translasisoal.html
+++ b/transformasi/latihansoal/translasisoal.html
@@ -44,7 +44,7 @@
               <a class="nav-link active" aria-current="page" href="/transformasi/">Transformasi</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="../daftarisimateri.html">Daftar isi Materi</a>
+              <a class="nav-link active" aria-current="page" href="../../daftarisimateri.html">Daftar isi Materi</a>
             </li>
           </ul>
         </div>
@@ -53,16 +53,12 @@
     <!-- navbar end -->
 
        <!-- START FORM KUIS -->
-    <section id="kontak" style="padding-top: 7rem">
+    <section id="kontak" style="padding-bottom: 3rem;">
       <div class="container">
-        <div class="row mb-3">
-          <div class="col text-center">
-            <h2>Latihan Soal Translasi</h2>
-           <i>Math_Dosman</i>
-          </div>
-        </div>
         <div class="row justify-content-center">
-          <div class="col-md-12">
+          <div class="col-md-9" style="padding-top: 5rem;">
+            <h2 class="text-center">Latihan Soal Translasi</h2>
+           <p class="text-center fst-italic"> Math_Dosman</p>
             <form name="translasi01-form">
               <div class="mb-3">
                 <label for="absen" class="form-label"><b> No Absen </b></label>
@@ -277,11 +273,22 @@
               </div>
             </form>
           </div>
+          <div class="col-md-3 d-block pb-2">
+            <div class="list-group sticky-sm-top" style="padding-top: 5rem">
+              <a href="../index.html" class="list-group-item list-group-item-action active" aria-current="true"> HOME www.mathdosman.site </a>
+              <a href="/transformasi/latihansoal/translasisoal.html" class="list-group-item list-group-item-action">Latihan Translasi</a>
+              <a href="#" class="list-group-item list-group-item-action"> Latihan Refleksi</a>
+              <a href="#" class="list-group-item list-group-item-action">Latihan Rotasi</a>
+              <a href="#" class="list-group-item list-group-item-action">Latihan Dilatasi</a>
+              <a href="#" class="list-group-item list-group-item-action">Latihan Transformasi suatu Kurva</a>
+              <a href="#" class="list-group-item list-group-item-action">Latihan Transformasi Komposisi</a>
+              <a href="/transformasi/daftarsoal.html" class="list-group-item list-group-item-action">Kumpulan Latihan Soal</a>
+            </div>
+          </div>
         </div>
       </div>
     </section>
     <!-- SOAL KUIS END-->
-    <hr />
     <!----------------------------------------------------------------------------------------------------------------------------->
     <!--------------------------------------SCRIPT BUAT LATIHAN SOAL--------------------------------------------------------------->
 
