--- a/transformasi/refleksi.html
+++ b/transformasi/refleksi.html
@@ -120,10 +120,10 @@
 <!-- ====================================================================================================================================================== -->
 
     <!-- start materi 1 -->
-    <section style="padding-top: 7rem">
+    <section>
       <div class="container">
         <div class="row">
-          <div class="col-md-9">
+          <div class="col-md-9" style="padding-top: 5rem">
             <h3>Refleksi(Pencerminan)</h3>
             <p>Sudahkah kalian bercermin hari ini? Apabila kalian perhatikan ketika bercermin, kalian melihat bahwa bayangan diri di cermin selalu mempunyai ukuran yang sama dengan diri sendiri. Sama halnya jarak diri ke cermin sama dengan jarak bayangan ke cermin.
             </p>
@@ -345,7 +345,7 @@ Bila dituliskan dalam bentuk matriks diperoleh: <br>
 
           </div>
           <div class="col-md-3">
-              <div class="list-group">
+              <div class="list-group sticky-top" style="padding-top: 5rem">
                 <a href="../index.html" class="list-group-item list-group-item-action active" aria-current="true">
                   HOME mathdosman.site
                 </a>
