--- a/transformasi/rotasi.html
+++ b/transformasi/rotasi.html
@@ -122,11 +122,11 @@
 
 
 
-<section style="padding-top: 6rem; padding-bottom: 5rem">
+<section style="padding-bottom: 5rem">
     <div class="container">
       <div class="row">
-        <h3> Rotasi (Perputaran) </h3>
-        <div class="col-md-9">
+        <div class="col-md-9" style="padding-top: 5rem;">
+          <h3> Rotasi (Perputaran) </h3>
 Rotasi (perputaran) adalah transformasi yang memindahkan suatu titik kr titik lain dengan cara memutar titik tersebut sejauh besar sudut tertentu terhadap titik pusat tertentu.
                 
 Suatu perputaran ditentukan oleh pusat, besar, dan arah sudutnya. Searah dengan jarum jam adalah arah negatif, sedangkan berlawanan dengan arah jarum jam adalah arah positif. Kalian akan mempelajari rotasi terhadap titik pusat \(O(0,0)\) dan rotasi terhadap pusat tertentu. 
@@ -246,7 +246,7 @@ $$\begin{pmatrix}x' \\ y' \end{pmatrix}=\begin{pmatrix}\cos \alpha & -\sin \alph
 <br>
         </div>
         <div class="col-md-3">
-        <div class="list-group">
+        <div class="list-group sticky-top" style="padding-top: 5rem;">
                 <a href="../index.html" class="list-group-item list-group-item-action active" aria-current="true">
                   HOME mathdosman.site
                 </a>
