--- a/transformasi/translasi.html
+++ b/transformasi/translasi.html
@@ -121,10 +121,10 @@
 <!-- ====================================================================================================================================================== -->
 
     <!-- start materi 1 -->
-    <section style="padding-top: 7rem;">
+    <section>
       <div class="container">
         <div class="row">
-          <div class="col-md-9">
+          <div class="col-md-9" style="padding-top: 5rem;">
             <h3>Translasi (Pergeseran)</h3>
             <p>
               Translasi adalah suatu transformasi yang memetakan tiap titik pada bidang dengan jarak dan arah tertentu. Jarak dan arah tertentu itu dapat diwakili oleh ruas garis berarah (misalnya \(\overrightarrow{AB } \)) atau oleh suatu
@@ -180,7 +180,7 @@
              
           </div>
           <div class="col-md-3">
-              <div class="list-group">
+              <div class="list-group sticky-top" style="padding-top: 5rem;">
                 <a href="../index.html" class="list-group-item list-group-item-action active" aria-current="true">
                   HOME mathdosman.site
                 </a>
