--- a/transformasi/dilatasi.html
+++ b/transformasi/dilatasi.html
@@ -119,25 +119,24 @@
 <!-- ================================================================= OFFCANVAS END ======================================================================-->
 <!-- ====================================================================================================================================================== -->
 
-<section style="padding-top: 6rem; padding-bottom: 5rem">
+<section style="padding-bottom: 5rem">
     <div class="container">
       <div class="row">
-<h3> Dilatasi (Perkalian) </h3>
-        <div class="col-md-9">
-
-<p> Dilatasi adalah transformasi yang mengubah jarak titik-titik dengan faktor skala (pengali) tertentu di pusat dilatasi tertentu. Jika yang didilatasikan adalah suatu bangun, maka ukuran bangun tersebut akan berubah, tetapi bentuknya tetap. Kita akan mempelajari perkalian atau dilatasi ditentukan oleh titik pusat \(O(0, 0)\) dan titik pusat \((a, b)\) faktor skala. \([O, k]\) adalah notasi dilatasi yang berpusat \(O(0, 0)\) dengan faktor skala \(k\) sedangkan \([(a, b),k]\), adalah notasi dilatasi yang berpusat di titik \((a, b)\) dengan faktor skala \(k\).</p>
-<ol>
-  <li class="fst-italic fw-bold"> Dilatasi Pusat \(O(0,0)\) dengan Faktor Skala \(k\) </li>
-     <p>
-      <img src="/transformasi/img/dilatasi1.png" alt="dilatasi1" width="300" class="img-fluid"> <br>
-      Jika \(P'\) merupakan bayangan \(P\) oleh dilatasi \([O,k] \), maka: <br>
-      \(OP'=k.OP\) <br>
-      Jadi, bayangan titik \(P(x,y)\) oleh dilatasi \([O,k]\) adalah \(P'(kx,ky) \) dan dapat juga ditulis sebagai:
-      $$P(x,y) \overset{[O,k]}{\rightarrow} P'(kx,ky)$$
-      Kita sudah ketahui bahwa bila titik \(P(x,y)\)didilatasikan terhadap titik pusat \(O(0, 0)\) dengan faktor skala \(k\), maka bayangannya adalah \(P'(kx,ky)\). Dengan demikian, diperoleh persamaan-persamaan berikut. <br>
-      \(x'=kx=kx+0.y \) <br>
-      \(y'=ky=0.x+ky\) <br>
-      Persamaan  dalam bentuk matriks <br>
+        <div class="col-md-9" style="padding-top: 5rem;">
+        <h3> Dilatasi (Perkalian) </h3>
+        <p> Dilatasi adalah transformasi yang mengubah jarak titik-titik dengan faktor skala (pengali) tertentu di pusat dilatasi tertentu. Jika yang didilatasikan adalah suatu bangun, maka ukuran bangun tersebut akan berubah, tetapi bentuknya tetap. Kita akan mempelajari perkalian atau dilatasi ditentukan oleh titik pusat \(O(0, 0)\) dan titik pusat \((a, b)\) faktor skala. \([O, k]\) adalah notasi dilatasi yang berpusat \(O(0, 0)\) dengan faktor skala \(k\) sedangkan \([(a, b),k]\), adalah notasi dilatasi yang berpusat di titik \((a, b)\) dengan faktor skala \(k\).</p>
+          <ol>
+            <li class="fst-italic fw-bold"> Dilatasi Pusat \(O(0,0)\) dengan Faktor Skala \(k\) </li>
+            <p>
+        <img src="/transformasi/img/dilatasi1.png" alt="dilatasi1" width="300" class="img-fluid"> <br>
+            Jika \(P'\) merupakan bayangan \(P\) oleh dilatasi \([O,k] \), maka: <br>
+            \(OP'=k.OP\) <br>
+            Jadi, bayangan titik \(P(x,y)\) oleh dilatasi \([O,k]\) adalah \(P'(kx,ky) \) dan dapat juga ditulis sebagai:
+            $$P(x,y) \overset{[O,k]}{\rightarrow} P'(kx,ky)$$
+            Kita sudah ketahui bahwa bila titik \(P(x,y)\)didilatasikan terhadap titik pusat \(O(0, 0)\) dengan faktor skala \(k\), maka bayangannya adalah \(P'(kx,ky)\). Dengan demikian, diperoleh persamaan-persamaan berikut. <br>
+            \(x'=kx=kx+0.y \) <br>
+            \(y'=ky=0.x+ky\) <br>
+            Persamaan  dalam bentuk matriks <br>
         \(\begin{align}
         \begin{pmatrix}x'\\y' \end{pmatrix}&=\begin{pmatrix}kx+0.y \\0.x+ky \end{pmatrix} \\ &=\begin{pmatrix}k&0 \\0&k \end{pmatrix}\begin{pmatrix}x\\y \end{pmatrix}
         \end{align}\)
@@ -273,7 +272,7 @@
 </div>
         </div>
         <div class="col-md-3">
-          <div class="list-group">
+          <div class="list-group sticky-top" style="padding-top: 5rem;">
                 <a href="../index.html" class="list-group-item list-group-item-action active" aria-current="true">
                   HOME mathdosman.site
                 </a>
