--- a/matriks/soal/soalmatriks4.html
+++ b/matriks/soal/soalmatriks4.html
@@ -52,15 +52,17 @@
     </nav>
     <!-- navbar end -->
 
-       <!-- START FORM KUIS -->
-    <section id="kontak" style="padding-top: 7rem">
+    <!-- START FORM KUIS -->
+    <section id="kontak">
       <div class="container">
-        <div class="row mb-3">
-          <div class="col text-center">
-            <h2>Latihan Soal Matriks (IV)</h2>
-           <i>Math_Dosman</i>
-          </div>
-        </div>
+        <div class="row">
+          <div class="col-md-9" style="padding-top: 5rem">
+            <div class="row mb-3">
+              <div class="col text-center">
+                <h2>Latihan Soal Matriks (IV)</h2>
+                <i>Math_Dosman</i>
+              </div>
+            </div>
         <div class="row justify-content-center">
           <div class="col-md-12">
             <form name="matriks4-form">
@@ -261,7 +263,7 @@
                 <!-- =====SOAL NO 11======================================================================= -->
                 <li>Jika \(\begin{pmatrix}a&0 \\ 0&b \end{pmatrix}\begin{pmatrix}1\\2 \end{pmatrix}=\begin{pmatrix}b \\ 3-2a \end{pmatrix}\) maka \(a=...\)</li>
                 <input type="radio" name="soal11" value="0" />
-               1
+                1
                 <br />
                 <input type="radio" name="soal11" value="0" />
                 2
@@ -368,11 +370,62 @@
           </div>
         </div>
       </div>
-    </section>
-    <!-- SOAL KUIS END-->
-    <hr />
-    <!----------------------------------------------------------------------------------------------------------------------------->
-    <!--------------------------------------SCRIPT BUAT LATIHAN SOAL--------------------------------------------------------------->
+      <div class="col-md-3">
+        <div class="sticky-top" style="padding-top: 5rem">
+        <!--======tombol offcanvas ========-->
+        <button class="btn btn-danger" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasWithBothOptions" aria-controls="offcanvasWithBothOptions">KLIK UNTUK MELIHAT KUNCI JAWABAN</button>
+        <!-- =====tombol offcanvas======= -->
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+        
+ <!-- START OFFCANVAS KUNCI -->
+    <!-- ================================================================================================================================ -->
+    <div class="offcanvas offcanvas-start" data-bs-scroll="true" tabindex="-1" id="offcanvasWithBothOptions" aria-labelledby="offcanvasWithBothOptionsLabel">
+      <div class="offcanvas-header">
+        <h5 class="offcanvas-title" id="offcanvasWithBothOptionsLabel">
+          KUNCI JAWABAN <br />
+          Latihan Soal Matriks IV
+        </h5>
+        <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+      </div>
+      <div class="offcanvas-body">
+        <div class="row">
+          <div class="col">
+            <ol>
+              <li>C</li>
+              <li>C</li>
+              <li>B</li>
+              <li>B</li>
+              <li>C</li>
+            </ol>
+          </div>
+          <div class="col">
+            <ol start="6">
+              <li>A</li>
+              <li>C</li>
+              <li>C</li>
+              <li>D</li>
+              <li>C</li>
+            </ol>
+          </div>
+          <div class="col">
+            <ol start="11">
+              <li>D</li>
+              <li>C</li>
+              <li>A</li>
+              <li>B</li>
+              <li>B</li>
+            </ol>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- ================================================================================================================================ -->
+    <!-- END KUNCI -->
 
     <!--------------------------------------------SCRIPT BUAT LATIHAN SOAL-------------------------------------------------------------------->
     <!---------------------------------------------------------------------------------------------------------------------------------------->
