--- a/transformasi/latihansoal/translasisoal.html
+++ b/transformasi/latihansoal/translasisoal.html
@@ -44,7 +44,7 @@
               <a class="nav-link active" aria-current="page" href="/transformasi/">Transformasi</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="../../daftarisimateri.html">Daftar isi Materi</a>
+              <a class="nav-link active" aria-current="page" href="../../daftarisimateri.html">Daftar isi web</a>
             </li>
           </ul>
         </div>
@@ -283,16 +283,49 @@
               <a href="#" class="list-group-item list-group-item-action">Latihan Transformasi suatu Kurva</a>
               <a href="#" class="list-group-item list-group-item-action">Latihan Transformasi Komposisi</a>
               <a href="/transformasi/daftarsoal.html" class="list-group-item list-group-item-action">Kumpulan Latihan Soal</a>
+              <button class="btn btn-danger" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasWithBothOptions" aria-controls="offcanvasWithBothOptions" disabled>KLIK UNTUK MELIHAT KUNCI JAWABAN</button>
             </div>
-          </div>
         </div>
       </div>
     </section>
     <!-- SOAL KUIS END-->
     <!----------------------------------------------------------------------------------------------------------------------------->
-    <!--------------------------------------SCRIPT BUAT LATIHAN SOAL--------------------------------------------------------------->
+    <!-- START OFFCANVAS KUNCI -->
+    <!-- ================================================================================================================================ -->
+    <div class="offcanvas offcanvas-start" data-bs-scroll="true" tabindex="-1" id="offcanvasWithBothOptions" aria-labelledby="offcanvasWithBothOptionsLabel">
+      <div class="offcanvas-header">
+        <h5 class="offcanvas-title" id="offcanvasWithBothOptionsLabel">
+          KUNCI JAWABAN <br />
+          Latihan Soal Translasi
+        </h5>
+        <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+      </div>
+      <div class="offcanvas-body">
+        <div class="row">
+          <div class="col">
+            <ol>
+              <li>E</li>
+              <li>A</li>
+              <li>D</li>
+              <li>E</li>
+              <li>A</li>
+            </ol>
+          </div>
+          <div class="col">
+            <ol start="6">
+              <li>A</li>
+              <li>C</li>
+              <li>B</li>
+              <li>D</li>
+              <li>A</li>
+            </ol>
+          </div>
+        </div>
+      </div>
+    </div>
 
-    <!--------------------------------------------SCRIPT BUAT LATIHAN SOAL-------------------------------------------------------------------->
+    <!-- ================================================================================================================================ -->
+    <!-- END KUNCI -->
     <!---------------------------------------------------------------------------------------------------------------------------------------->
     <script>
       function kirim() {
